styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&display=swap');

:root{
    font-family: "Roboto Slab","Poppins",sans-serif,--apple-system, system-ui;
}

body{
    min-height: 100vh;
    display: grid;
    margin: 0;
    grid-template-rows: 1fr 4fr;
    grid-template-columns: 1fr 4fr;
}

.sidebar, .content, .header{
    border: 1px solid black;
    /* text-align: center; */
}

/* Sidbar css content */
nav{
    background-color: #287292;
    grid-area: 1/1/-1/2;
    display: grid;
    grid-template-rows: min-content min-content;
    margin: 0;
}

.logo, .items{
    /* temporary */
    border: 1px dotted red;
}

.logo{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: white;
    font-size: 1.5rem;
}

.icon{
    width: 3rem;
}
.icon, .icon-shape{
    filter: invert(1);
}

.items{
    list-style-type: none;
}

li{
    display: flex;
    gap:0.5rem;
    color: white;
    align-items: center;
}
.icon-shape{
    width: 1.5rem;
    height: 1.5rem;
}

/* Header section */

header{
    grid-area: 1/2/2/4;
    display: grid;
    grid-template: 1fr 2fr/2fr 1fr;
}

.search-icon{
    width: 1.5rem;
}

.search-bar{
    display: flex;
    justify-content: center;
    align-items: center;
}
#search{
    width: 90%;
    height: 25%;
}

.user {
    display: grid;
    grid-template-columns: min-content min-content min-content;
    gap:1rem;
    align-items: center;
}
.bell{
    width: 2rem;
}
.user.avatar{
    width: 4rem;
    border-radius: 2rem;
}

.main {
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: auto 1fr;
    gap: 0.2rem;
}
.avatar.main {
    grid-area: 1/1/3/2;
    width: 6rem;
    border-radius: 3rem;
}

.buttons {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.search-bar,.user, .main, .buttons{
    /* temporary */
    border: 1px dotted green;
}

/* Content section */
main{
    background-color: gray;
    grid-area: 2/2/4/-1;
    display: grid;
    grid-template-columns: 4fr 1fr;


}

.projects,.Announcments,.Trending{
    /* temp */
    border: 2px dotted orange
}
.projects {
    grid-column: 1/2;
    display: grid;
    grid-template-columns: repeat(2, minmax(100px, 1fr));
    grid-template-rows: min-content repeat(3, minmax(15rem, min-content));
    gap: 1rem;
    padding: 0.5rem 2rem;
}
h2{
    grid-column: 1/-1;
}

/* Cards */
#projects{
    /* temp */
    border: 2px dotted red;
}
.cards{
    display: grid;
    grid-template-rows:auto 1fr;
    grid-template-columns: 1rem 1fr;
    background: white;
    border-radius: 1rem;
}
.color{
    grid-row: 1/-1;
    background-color: goldenrod;
    border-radius: 1rem 0 0 1rem;
}

/* Card content */
.project-info{
    padding-left: 10px;
}

/* Card image icons */
.image-container {
    display: flex;
    justify-content: end;
    align-items: end;
    gap: 0.5rem;
    padding-right: 1rem;
    padding-bottom: 0.5rem;
}
.actions{
    width: 1.5rem;
}

aside{
    grid-column: 2/3;
    display: grid;
    grid-template-rows: repeat(4, auto);
}
.Announcments, .Trending{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background: white;
    border-radius: 2rem;
    padding: 10px;
}

.trending-avatar{
    width: 4rem;
    border-radius: 2rem;
}
#Announcments,#Trending{
    /* temp */
    border: 2px dotted black;
}

/* Trending */
.trend{
    display: grid;
    grid-template: 1fr auto/auto auto;
}
.trending-title {
    grid-area: 2/1/3/-1;
}

